--- a/CucumberTestAutomation/pom.xml
+++ b/CucumberTestAutomation/pom.xml
@@ -62,7 +62,7 @@
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>gherkin</artifactId>
-    <version>3.2.0</version>
+    <version>4.1.3</version>
 </dependency>
    <dependency>
       <groupId>junit</groupId>
@@ -107,27 +107,27 @@
 <artifactId>tag-expressions</artifactId>
 <version>1.1.1</version>
 </dependency>
-<!-- <starts extent test reports dependency> -->
+<!--  <starts extent test reports dependency>  -->
 
-<!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
+<!--  https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport  -->
 <dependency>
     <groupId>com.vimalselvam</groupId>
     <artifactId>cucumber-extentsreport</artifactId>
     <version>2.0.2</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<!--  https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
 <dependency>
     <groupId>com.relevantcodes</groupId>
     <artifactId>extentreports</artifactId>
     <version>2.41.2</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports  -->
 <dependency>
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
     <version>3.0.3</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+<!--  https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting  -->
 <dependency>
     <groupId>net.masterthought</groupId>
     <artifactId>cucumber-reporting</artifactId>
@@ -141,5 +141,33 @@
     <scope>system</scope>
     <systemPath>C:\Program Files\Java\jdk1.8.0_231\lib\tools.jar</systemPath>
 </dependency>
+
+<!--  recently Added  -->
+
+<!--  https://mvnrepository.com/artifact/io.cucumber/cucumber-testng  -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>4.7.2</version>
+        </dependency>
+         <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>4.7.2</version>
+        </dependency>
+<!--         https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm-deps -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-jvm-deps</artifactId>
+    <version>1.0.6</version>
+    <scope>provided</scope>
+</dependency>
+<!--         https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-core</artifactId>
+    <version>4.7.2</version>
+</dependency>
+
   </dependencies>
 </project>
